--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Bookstore App",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "nodemon server/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "Nhom1",
