--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "Bookstore App",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon server/app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node app.js"
     },
     "keywords": [],
     "author": "Nhom1",
